# AiLearning

./: .gitignore  requirements.txt
1-Langchain/3.2-DataIngestion/: DataIngestion.py
1-Langchain/3.3-DataTransformer/: textsplitter.py
1-Langchain/3.4-Embeddings/: huggingfaceembedding.py  ollamaembedding.py
1-Langchain/5.1-Faiss/: myfaiss.py
1-Langchain/5.1-Faiss/faiss_index/: index.faiss  index.pkl
1-Langchain/5.2-Chroma/: chroma.py  speech.txt
2-Langchain/First/: 1.py
2-Langchain/Second/: ollamaapp.py  serve.py  simpleapp.py  simplellmLCEL.py
3-Langchain/chatbot/: 1-chatbot.py  PDFChatBot.py  conversation.py  vectorretriever.py
4-Langchain/langchainupdated/: pyproject.toml  requirements.txt
4-Langchain/langchainupdated/updatedlangchain/: 1-langchainIntro.py  2-modelintegration.py
